# RC2026_SIM

./: .gitignore  LICENSE.txt  README.md
assets/ArmDog/: armdog.usd  armdog_dual.usd  armdog_dual_ros2.usd  armdog_ros2.usd  armdog_single.usd  armdog_single_ros2.usd  pikachu_head.usd  pikachu_tail.usd  pikadog.usd  pikadog_ros2.usd  test.usd
assets/Dofbot/: dofbot.usd
assets/Go2/: go2.usd
assets/Jetbot/: jetbot.usd
assets/KFS/: fake_blue.usd  fake_red.usd  r1_blue.usd  r1_red.usd  r2_blue_1.usd  r2_blue_10.usd  r2_blue_11.usd  r2_blue_12.usd  r2_blue_13.usd  r2_blue_14.usd  r2_blue_15.usd  r2_blue_2.usd  r2_blue_3.usd  r2_blue_4.usd  r2_blue_5.usd  r2_blue_6.usd  r2_blue_7.usd  r2_blue_8.usd  r2_blue_9.usd  r2_red_1.usd  r2_red_10.usd  r2_red_11.usd  r2_red_12.usd  r2_red_13.usd  r2_red_14.usd  r2_red_15.usd  r2_red_2.usd  r2_red_3.usd  r2_red_4.usd  (+5 more)
ros2_ws/src/deploy_policy/: CMakeLists.txt  package.xml
ros2_ws/src/deploy_policy/launch/: armdog_controller.launch.py
ros2_ws/src/deploy_policy/policy/policy_1/: model.pt
ros2_ws/src/deploy_policy/policy/policy_1/exported/: policy.onnx  policy.pt
ros2_ws/src/deploy_policy/policy/policy_1/params/: agent.pkl  agent.yaml  env.pkl  env.yaml
ros2_ws/src/deploy_policy/policy/policy_rough/: model_9700.pt
ros2_ws/src/deploy_policy/policy/policy_rough/exported/: policy.onnx  policy.pt
ros2_ws/src/deploy_policy/policy/policy_rough/params/: agent.pkl  agent.yaml  env.pkl  env.yaml
ros2_ws/src/deploy_policy/scripts/: __init__.py  armdog_controller.py
scripts/: list_envs.py  random_agent.py  zero_agent.py
(+97 files in other folders)
